--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -81,19 +81,21 @@ body {
 }
 
 .new-generation {
-  padding: 132px 230px;
+  padding: 117px 230px;
   .info {
+
     max-width: 1080px;
     margin: 0 auto;
     text-align: center;
     &__title {
       font-weight: bold;
-      letter-spacing: 3.7px;
+      letter-spacing: 1.7px;
       margin: 23px 0;
     }
     &__text {
-      font-size: 16px;
-      line-height: 30px;
+      font-size: 17px;
+      line-height: 33px;
+      margin-bottom: 20px;
     }
   }
 
@@ -117,17 +119,22 @@ body {
       flex-direction: column;
       width: 33.1%;
       .info {
-        max-width: 400px;
-        padding: 100px 59px 54px 70px;
+        padding: 64px 65px 60px 61px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         &__title {
           margin-top: 23px;
-          margin-bottom: 10px;
+          max-width: 400px;
+          margin-bottom: 11px;
         }
         &__text {
           text-align: justify;
           position: relative;
-          padding-bottom: 33px;
+          max-width: 400px;
+          font-size: 16px;
+          line-height: 30px;
           &:after {
             content: '';
             width: 50px;
@@ -141,7 +148,7 @@ body {
         &:after {
           content: '';
           position: absolute;
-          left: 48%;
+          left: 46%;
           bottom: -39px;
           border: 20px solid transparent;
           border-top: 20px solid white;
@@ -163,7 +170,14 @@ body {
       }
     }
   }
-
+  &__items:nth-child(2) {
+    &__item-content .info__title {
+      margin-top: 21px;
+      margin-bottom: 15px;
+      max-width: 400px;
+      font-size: 18px;
+    }
+  }
 }
 
 .contact {
@@ -174,9 +188,13 @@ body {
   img {
     width: 32px;
     height: 27px;
+    margin-top: 24px;
   }
   .slick-list {
-    margin-bottom: 100px;
+    margin-bottom: 85px;
+  }
+  .slick-dots li button:before {
+    font-size: 13px;
   }
   .carousel-indicators li {
     background-color: white;
@@ -195,9 +213,11 @@ body {
     margin: 0 auto;
     &__title {
       max-width: 1040px;
-      margin-top: 27px;
+      margin-top: 33px;
       margin-bottom: 11px;
       text-transform: none;
+      font-size: 18px;
+      letter-spacing: 2px;
       &__time {
         display: inline;
         color: #848789;
@@ -312,10 +332,6 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 110px;
-  img {
-    width: 94px;
-    height: 85px;
-  }
   &__title {
     margin-top: 31px;
     font-size: 24px;
@@ -327,7 +343,7 @@ body {
     display: flex;
     input {
       padding: 25px;
-      width: 350px;
+      width: 355px;
       font-size: 15px;
       color: #c8c8c8;
       border: 2px solid #d3d7d9;
@@ -336,13 +352,13 @@ body {
       }
     }
     button {
-      padding: 25px 49px;
+      padding: 25px 45px;
       background: #64c29e;
       border: none;
       font-size: 24px;
       line-height: 24px;
-      color: #ffffff;
-      font-weight: 300;
+      color: #fff;
+
       &:hover {
         cursor: pointer;
         background-color: #ff5654;
@@ -356,7 +372,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 90px 108px;
+  padding: 84px 88px;
   &__item {
     font-size: 16px;
     line-height: 18px;
@@ -369,6 +385,7 @@ body {
   }
   .address {
     &__link {
+      display: block;
       text-decoration: none;
       color: #848789;
     }
@@ -395,6 +412,9 @@ body {
     padding-left: 10px;
     display: flex;
     align-items: center;
+    font-style: italic;
+    font-size: 14px;
+    line-height: 18px;
     &__by {
       color: #848789;
       margin-right: 10px;
@@ -450,7 +470,7 @@ body {
             &:after {
               content: '';
               position: absolute;
-              left: 45%;
+              left: 47%;
               bottom: -39px;
               border: 20px solid transparent;
               border-top: 20px solid white;
@@ -478,12 +498,6 @@ body {
       margin: 0;
     }
   }
-  .author {
-    img {
-      width: auto;
-      height: auto;
-    }
-  }
 
 }
 
@@ -501,7 +515,7 @@ body {
   .hamburg-menu {
     position: fixed;
     top: 50px;
-    right: -27px;
+    right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
@@ -597,12 +611,12 @@ body {
     transition: all .4s ease;
   }
   .menu.open .menu__item {
-    padding: 20px 40px;
+    padding: 20px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  /**************************************/
+
   .contact-with-us {
     &__input-section {
       display: flex;
@@ -731,6 +745,9 @@ body {
 }
 
 @media screen and (max-width: 380px) {
+  .hamburg-menu {
+    right: -27px;
+  }
   .new-generation {
     padding: 117px 20px;
     .info {
