--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -23,7 +23,6 @@ body {
   width: 100%;
   padding: 35px 0;
   transition: all .4s ease;
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,15 +30,14 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 13px;
-  &__item {
-    margin: 0 40px;
-  }
+
   &__link {
     display: block;
     color: #4d4959;
     text-decoration: none;
     letter-spacing: 3px;
-    img {
+    margin: 0 40px;
+    &__logo {
       width: 94px;
       height: 85px;
     }
@@ -83,18 +81,18 @@ body {
 .new-generation {
   padding: 117px 230px;
   .info {
-
     max-width: 1080px;
     margin: 0 auto;
-    text-align: center;
+    &__logo {
+      width: 52px;
+      height: 42px;
+    }
     &__title {
-      font-weight: bold;
       letter-spacing: 1.7px;
       margin: 23px 0;
     }
     &__text {
       font-size: 17px;
-      line-height: 33px;
       margin-bottom: 20px;
     }
   }
@@ -155,27 +153,86 @@ body {
         }
       }
     }
+
     &:last-child {
       .image-container {
         width: 33.5%;
-        min-height: 200px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
       }
       &__item-content {
         width: 33.5%;
       }
+      .info {
+        &__logo {
+          width: 23px;
+          height: 41px;
+        }
+      }
+      .generation-info__items__item-content {
+        .image-container {
+          background: url('../images/Layer16.png') no-repeat center / cover;
+          width: 100%
+        }
+      }
+
+      .image-container:first-child {
+        background-image: url("../images/Layer15.png");
+        &__logo {
+          width: 208px;
+          height: 67px;
+        }
+      }
+      .image-container:last-child {
+        background-image: url('../images/Layer14.png');
+      }
+    }
+  }
+  &__items:first-child {
+    .generation-info__items__item-content {
+      .image-container {
+        background-image: url('../images/Layer11.png');
+        width: 100%;
+      }
+      .info {
+        &__logo {
+
+          width: 41px;
+          height: 30px;
+        }
+      }
+    }
+    .image-container {
+      background-image: url('../images/bicycle-company.png');
+      &__logo {
+        width: 113px;
+        height: 118px;
+      }
     }
   }
   &__items:nth-child(2) {
-    &__item-content .info__title {
-      margin-top: 21px;
-      margin-bottom: 15px;
-      max-width: 400px;
-      font-size: 18px;
+    /* &__item-content .info__title {
+       margin-top: 21px;
+       margin-bottom: 15px;
+       max-width: 400px;
+       font-size: 18px;
+     }*/
+    .generation-info__items__item-content {
+      .info {
+        &__logo {
+          width: 32px;
+          height: 32px;
+        }
+      }
+      .image-container {
+        background-image: url('../images/Layer13.png');
+        width: 100%;
+      }
+    }
+    .image-container {
+      background-image: url('../images/Layer12.png');
+      &__logo {
+        width: 177px;
+        height: 152px;
+      }
     }
   }
 }
@@ -258,12 +315,17 @@ body {
     .item--hover {
       height: 267px;
     }
+
+  }
+  .gallery__items .item:first-child {
+    .gallery__items .item--hover {
+      background-image: url('../images/Layer19.png');
+    }
   }
 }
 
 .item--hover {
   width: 100%;
-  height: 265px;
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
@@ -332,6 +394,10 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 110px;
+  &__logo {
+    width: 94px;
+    height: 85px;
+  }
   &__title {
     margin-top: 31px;
     font-size: 24px;
@@ -431,12 +497,11 @@ body {
   }
 }
 
-@media screen and (max-width: 1440px) {
-
-  .gallery {
-    display: flex;
-    &__items {
-      max-width: 33.333333%;
+.footer {
+  &__item {
+    margin-bottom: 10px;
+    &:last-child {
+      margin: 0;
     }
   }
 
@@ -460,7 +525,6 @@ body {
         display: flex;
         flex-direction: column;
         .image-container, .generation-info__items__item-content {
-          align-items: center;
           width: 100%;
         }
         &__item-content {
@@ -491,16 +555,6 @@ body {
   }
 }
 
-.footer {
-  &__item {
-    margin-bottom: 10px;
-    &:last-child {
-      margin: 0;
-    }
-  }
-
-}
-
 @media screen and (max-width: 768px) {
   .menu {
     padding: 0;
@@ -518,15 +572,15 @@ body {
     right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
-    height: 50px;
+    height: 23px;
     cursor: pointer;
     z-index: 3;
   }
   .burger-nav {
     width: 50px;
-    height: 6px;
+    height: 0;
     position: absolute;
-    top: 50%;
+    top: 0;
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -540,13 +594,15 @@ body {
     width: 50px;
     height: 6px;
     position: absolute;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    top: 16px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .5s;
+    border: none;
     background: #64c29e;
   }
 
   .burger-nav:before {
-    top: -16px;
+    top: 0px;
     background: #64c29e;
   }
 
@@ -572,12 +628,12 @@ body {
     background: #fff;
   }
 
-  .menu .menu__item {
+  .menu {
     text-align: left;
     margin: 0;
   }
 
-  .menu .menu__item a {
+  .menu a {
     color: #64c29e;
   }
   .menu a:hover {
@@ -610,7 +666,7 @@ body {
     z-index: 1;
     transition: all .4s ease;
   }
-  .menu.open .menu__item {
+  .menu.open .menu__link {
     padding: 20px 0px;
     display: flex;
     flex-direction: column;
