--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -315,7 +315,7 @@ body {
     .item--hover {
       height: 267px;
     }
-
+//
   }
   .gallery__items .item:first-child {
     .gallery__items .item--hover {
