--- a/app/style/style.css
+++ b/app/style/style.css
@@ -4,7 +4,8 @@ html, body {
   padding: 0; }
 
 body {
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  font-size: 16px; }
 
 .slick-dots {
   bottom: 0; }
@@ -45,7 +46,7 @@ body {
   z-index: 2; }
 
 .main-screen {
-  background: scroll transparent url("../images/bg.png") no-repeat center/cover;
+  background: transparent url("../images/Bg.png") no-repeat center/cover;
   height: 100vh; }
 
 .info {
@@ -94,9 +95,8 @@ body {
       flex-direction: column;
       align-items: center; }
       .generation-info__items__item-content .info__title {
-        margin-top: 23px;
         max-width: 400px;
-        margin-bottom: 11px; }
+        margin: 23px 0 11px 0; }
       .generation-info__items__item-content .info__text {
         text-align: justify;
         position: relative;
@@ -107,7 +107,7 @@ body {
           content: '';
           width: 50px;
           height: 3px;
-          background: #d7d7d7;
+          background-color: #d7d7d7;
           display: block;
           margin: 40px auto 0; }
       .generation-info__items__item-content .info:after {
@@ -123,6 +123,8 @@ body {
     width: 33.5%; }
   .generation-info__items:last-child .info__logo {
     width: 23px; }
+  .generation-info__items:last-child .image-container:last-child {
+    background-image: url("../images/Layer14.png"); }
   .generation-info__items:last-child .generation-info__items__item-content .image-container {
     background: url("../images/Layer16.png") no-repeat center/cover;
     width: 100%; }
@@ -130,8 +132,6 @@ body {
     background-image: url("../images/Layer15.png"); }
     .generation-info__items:last-child .image-container:first-child .image-container__logo {
       width: 208px; }
-  .generation-info__items:last-child .image-container:last-child {
-    background-image: url("../images/Layer14.png"); }
 
 .generation-info__items:first-child .generation-info__items__item-content .image-container {
   background-image: url("../images/Layer11.png");
@@ -141,26 +141,21 @@ body {
   width: 41px; }
 
 .generation-info__items:first-child .image-container {
-  background-image: url("../images/bicycle-company.png"); }
+  background-image: url("../images/Bicycle-company.png"); }
   .generation-info__items:first-child .image-container__logo {
     width: 113px; }
 
-.generation-info__items:nth-child(2) {
-  /* &__item-content .info__title {
-       margin-top: 21px;
-       margin-bottom: 15px;
-       max-width: 400px;
-       font-size: 18px;
-     }*/ }
-  .generation-info__items:nth-child(2) .generation-info__items__item-content .info__logo {
-    width: 32px; }
-  .generation-info__items:nth-child(2) .generation-info__items__item-content .image-container {
-    background-image: url("../images/Layer13.png");
-    width: 100%; }
-  .generation-info__items:nth-child(2) .image-container {
-    background-image: url("../images/Layer12.png"); }
-    .generation-info__items:nth-child(2) .image-container__logo {
-      width: 177px; }
+.generation-info__items:nth-child(2) .image-container {
+  background-image: url("../images/Layer12.png"); }
+  .generation-info__items:nth-child(2) .image-container__logo {
+    width: 177px; }
+
+.generation-info__items:nth-child(2) .generation-info__items__item-content .info__logo {
+  width: 32px; }
+
+.generation-info__items:nth-child(2) .generation-info__items__item-content .image-container {
+  background-image: url("../images/Layer13.png");
+  width: 100%; }
 
 .contact {
   padding: 100px 137px;
@@ -188,8 +183,7 @@ body {
     margin: 0 auto; }
     .contact .info__title {
       max-width: 1040px;
-      margin-top: 33px;
-      margin-bottom: 11px;
+      margin: 33px 0 11px 0;
       text-transform: none;
       font-size: 18px;
       letter-spacing: 2px; }
@@ -221,7 +215,37 @@ body {
     .gallery__items .item {
       display: flex; }
     .gallery__items .item--hover {
-      height: 267px; }
+      height: 267px;
+      width: 100%;
+      display: flex;
+      background: no-repeat center / cover; }
+      .gallery__items .item--hover__link {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #fff;
+        font-size: 18px;
+        font-weight: bold;
+        opacity: 0;
+        background-color: rgba(100, 194, 158, 0.8); }
+        .gallery__items .item--hover__link:hover {
+          opacity: 1;
+          cursor: pointer;
+          transition: all 400ms ease; }
+        .gallery__items .item--hover__link:after {
+          position: absolute;
+          content: '';
+          left: 0;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          opacity: 0;
+          z-index: -1; }
   .gallery .gallery__items:first-child .item:first-child .item--hover:first-child {
     background-image: url("../images/Layer19.png"); }
   .gallery .gallery__items:first-child .item:first-child .item--hover:nth-child(2) {
@@ -240,41 +264,6 @@ body {
     background-image: url("../images/Layer19.png"); }
   .gallery .gallery__items:last-child .item:last-child .item--hover:nth-child(2) {
     background-image: url("../images/Layer21.png"); }
-
-.item--hover {
-  width: 100%;
-  display: flex;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center; }
-  .item--hover__link {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background-image: none;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    opacity: 0;
-    background-color: rgba(100, 194, 158, 0.8); }
-    .item--hover__link:hover {
-      opacity: 1;
-      cursor: pointer;
-      transition: all 400ms ease; }
-    .item--hover__link:after {
-      position: absolute;
-      content: '';
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      opacity: 0;
-      z-index: -1; }
 
 .discover {
   padding: 70px 0;
@@ -357,7 +346,6 @@ body {
       .footer .social-icons__link:last-child {
         margin: 0; }
   .footer .author {
-    padding-left: 10px;
     display: flex;
     align-items: center;
     font-style: italic;
@@ -444,12 +432,12 @@ body {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     transition: .5s;
     border: none;
-    background: #64c29e; }
+    background-color: #64c29e; }
   .burger-nav:before {
     top: 0px;
-    background: #64c29e; }
+    background-color: #64c29e; }
   .hamburg-menu.active .burger-nav {
-    background: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
     transition: all 1s ease; }
   .hamburg-menu.active .burger-nav:before {
@@ -461,7 +449,7 @@ body {
   .menu {
     height: 0;
     overflow: hidden;
-    background: #fff; }
+    background-color: #fff; }
   .menu {
     text-align: left;
     margin: 0; }
@@ -526,9 +514,10 @@ body {
   .generation-info__items {
     flex-direction: column; }
     .generation-info__items .image-container {
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
+      /*  background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;*/
+      background: no-repeat center / cover;
       padding: 40px 0; }
     .generation-info__items .image-container, .generation-info__items__item-content {
       width: 100%; }
@@ -538,7 +527,7 @@ body {
     flex-direction: column; }
     .generation-info__items:last-child .image-container {
       width: 100%;
-      padding: 0px;
+      padding: 0;
       height: 200px; }
     .generation-info__items:last-child__item-content {
       width: 100%; }
