--- a/app/style/style.css
+++ b/app/style/style.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   width: 100%;
   padding: 35px 0;
-  transition: all .4s ease;
+  transition: background .4s ease;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,14 +25,14 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 13px; }
+  .menu__i-logo {
+    width: 94px; }
   .menu__link {
     display: block;
     color: #4d4959;
     text-decoration: none;
     letter-spacing: 3px;
     margin: 0 40px; }
-    .menu__link__logo {
-      width: 94px; }
     .menu__link:hover {
       color: #64c29e;
       cursor: pointer;
@@ -141,7 +141,7 @@ body {
   width: 41px; }
 
 .generation-info__items:first-child .image-container {
-  background-image: url("../images/Bicycle-company.png"); }
+  background-image: url("../images/BicycleCompany.png"); }
   .generation-info__items:first-child .image-container__logo {
     width: 113px; }
 
@@ -236,7 +236,7 @@ body {
         .gallery__items .item--hover__link:hover {
           opacity: 1;
           cursor: pointer;
-          transition: all 400ms ease; }
+          transition: opacity 400ms ease; }
         .gallery__items .item--hover__link:after {
           position: absolute;
           content: '';
@@ -282,7 +282,7 @@ body {
       cursor: pointer;
       background-color: #64c29e;
       border: 1px solid #64c29e;
-      transition: all 400ms ease-out; }
+      transition: background 400ms ease-out; }
 
 .contact-with-us {
   font-size: 24px;
@@ -409,21 +409,20 @@ body {
     right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
-    height: 23px;
     cursor: pointer;
     z-index: 3; }
-  .burger-nav {
-    width: 50px;
-    height: 0;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: .5s;
-    background: #64c29e;
-    border: none; }
-  .burger-nav:before, .burger-nav:after {
+    .hamburg-menu__hamburg-menu__burger-nav {
+      width: 50px;
+      height: 0;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: .5s;
+      background: #64c29e;
+      border: none; }
+  .hamburg-menu__burger-nav:before, .hamburg-menu__burger-nav:after {
     content: '';
     width: 50px;
     height: 6px;
@@ -433,17 +432,17 @@ body {
     transition: .5s;
     border: none;
     background-color: #64c29e; }
-  .burger-nav:before {
+  .hamburg-menu__burger-nav:before {
     top: 0px;
     background-color: #64c29e; }
-  .hamburg-menu.active .burger-nav {
+  .hamburg-menu.active .hamburg-menu__burger-nav {
     background-color: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
     transition: all 1s ease; }
-  .hamburg-menu.active .burger-nav:before {
+  .hamburg-menu.active .hamburg-menu__burger-nav:before {
     top: 0;
     transform: rotate(45deg); }
-  .hamburg-menu.active .burger-nav:after {
+  .hamburg-menu.active .hamburg-menu__burger-nav:after {
     top: 0;
     transform: rotate(135deg); }
   .menu {
