--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -23,7 +23,7 @@ body {
   position: absolute;
   width: 100%;
   padding: 35px 0;
-  transition: all .4s ease;
+  transition: background .4s ease;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,16 +31,16 @@ body {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 13px;
-
+  &__i-logo {
+    width: 94px;
+  }
   &__link {
     display: block;
     color: #4d4959;
     text-decoration: none;
     letter-spacing: 3px;
     margin: 0 40px;
-    &__logo {
-      width: 94px;
-    }
+
     &:hover {
       color: #64c29e;
       cursor: pointer;
@@ -194,7 +194,7 @@ body {
       }
     }
     .image-container {
-      background-image: url('../images/Bicycle-company.png');
+      background-image: url('../images/BicycleCompany.png');
       &__logo {
         width: 113px;
       }
@@ -318,7 +318,7 @@ body {
         &:hover {
           opacity: 1;
           cursor: pointer;
-          transition: all 400ms ease;
+          transition: opacity 400ms ease;
         }
         &:after {
           position: absolute;
@@ -396,7 +396,7 @@ body {
       cursor: pointer;
       background-color: rgb(100, 194, 158);
       border: 1px solid rgb(100, 194, 158);
-      transition: all 400ms ease-out;
+      transition: background 400ms ease-out;
     }
   }
 
@@ -578,24 +578,24 @@ body {
     right: -15px;
     transform: translate(-50%, -50%);
     width: 50px;
-    height: 23px;
+    // height: 23px;
     cursor: pointer;
     z-index: 3;
-  }
-  .burger-nav {
-    width: 50px;
-    height: 0;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: .5s;
-    background: #64c29e;
-    border: none;
+    &__hamburg-menu__burger-nav {
+      width: 50px;
+      height: 0;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      transition: .5s;
+      background: #64c29e;
+      border: none;
+    }
   }
 
-  .burger-nav:before, .burger-nav:after {
+  .hamburg-menu__burger-nav:before, .hamburg-menu__burger-nav:after {
     content: '';
     width: 50px;
     height: 6px;
@@ -607,23 +607,24 @@ body {
     background-color: #64c29e;
   }
 
-  .burger-nav:before {
+  .hamburg-menu__burger-nav:before {
     top: 0px;
     background-color: #64c29e;
   }
 
-  .hamburg-menu.active .burger-nav {
+  .hamburg-menu.active .hamburg-menu__burger-nav {
     background-color: rgba(0, 0, 0, 0);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
     transition: all 1s ease;
+
   }
 
-  .hamburg-menu.active .burger-nav:before {
+  .hamburg-menu.active .hamburg-menu__burger-nav:before {
     top: 0;
     transform: rotate(45deg);
   }
 
-  .hamburg-menu.active .burger-nav:after {
+  .hamburg-menu.active .hamburg-menu__burger-nav:after {
     top: 0;
     transform: rotate(135deg);
   }
